--- a/styles.css
+++ b/styles.css
@@ -218,7 +218,8 @@ i {
     margin: 5px;
     border-radius: 5px;
     /* background-color: var(--hairpink); */
-    border: 1px solid var(--hairpink);
+    /* border: 1px solid var(--hairpink); */
+    border: 1px solid var(--svgs-border);
     line-height: 40px;
 }
 
@@ -517,6 +518,13 @@ iframe {
 
     button {
         width: 100%;
+    }
+    
+    .video {
+        /* position: relative;
+        overflow: hidden;
+        width: 100%; */
+        height: 30vh;
     }
 
     iframe, #projects img {
